# ldr-humanoid-arm-5dof-ros2

./: .gitignore  ACTUATOR_LIMITS.md  ADDITIONAL_TOOLS_INSTALL.md  AUTO_TUNE_README.md  CLAUDE.md  CONFIGURATION_SUMMARY.md  INSTALLATION.md  MOTOR_SPECIFICATIONS.md  MOVEIT2_INSTALL.md  PID_BASELINE.md  PID_CALIBRATION_GUIDE.md  PID_README.md  PID_TUNING_GUIDE.md  README (Copy).md  README.md  ROS2_CONTROL_INSTALL.md  ROS2_INSTALL.md  SINGLE_JOINT_TUNING.md  SOFTWARE_GUIDE.md  TRAJECTORY_TIMING.md  TROUBLESHOOTING_PID_TUNER.md  actuator_specs.md  install_all.sh
humanoid_arm_bringup/: CMakeLists.txt  package.xml
humanoid_arm_bringup/config/: view_robot.rviz
humanoid_arm_bringup/launch/: REFACTORING_SUMMARY.md  full_system.launch.py  full_system.launch.py.backup  gazebo.launch.py  gazebo.launch.py.backup  gazebo_rqt.launch.py  gazebo_rqt_EXAMPLE.md  gazebo_simple.launch.py  pid_calibration.launch.py  pid_tuning.launch.py  robot.launch.py
humanoid_arm_bringup/launch/modules/: IMPORT_STYLES.md  PATH_FIX.md  README.md  STRUCTURE.md  __init__.py  controllers.py  gazebo.py  sensors.py
humanoid_arm_bringup/launch/modules/gui/: __init__.py  rqt.py  rviz.py
humanoid_arm_bringup/launch/modules/providers/: __init__.py  controllers.py  gazebo.py  robot_description.py
humanoid_arm_bringup/launch/modules/utilities/: __init__.py
humanoid_arm_bringup/worlds/: assembly_tasks.sdf  contact_manipulation_arena.sdf  empty_world.sdf  obstacle_course.sdf  whole_arm_workspace.sdf
humanoid_arm_control/: CMakeLists.txt  humanoid_arm_control.xml  package.xml
humanoid_arm_control/config/: actuator_specs.yaml  controllers.yaml
humanoid_arm_control/include/humanoid_arm_control/: robstride_system.hpp  visibility_control.h
humanoid_arm_control/scripts/: auto_tune_pid.py  auto_tune_pid_simple.py  continuous_test.py  joint_control.py  joint_control_gui.py  joint_control_wrapper.sh  pid_tuner_gui.py  reach_target.py  reach_target_ik.py  reach_target_moveit.py  reach_target_simple.py  reach_with_ik.py  simple_tuner_gui.py  test_trajectory.py  trajectory_tuner_gui.py  trajectory_tuner_ui.py  tune_pid.py  tune_single_joint.py  wave_publisher.py
humanoid_arm_control/src/: robstride_system.cpp
humanoid_arm_control/ui/: joint_control.ui  trajectory_tuner.ui
humanoid_arm_description/: CMakeLists.txt  package.xml
humanoid_arm_description/config/: ros2_control.yaml
humanoid_arm_description/launch/: display.launch.py
humanoid_arm_description/urdf/: humanoid_arm_5dof.gazebo.xacro  humanoid_arm_5dof.gazebo_harmonic.xacro  humanoid_arm_5dof.ros2_control.xacro  humanoid_arm_5dof_macro.urdf.xacro  humanoid_arm_5dof_ros2_control.urdf.xacro
humanoid_arm_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
humanoid_arm_moveit_config/config/: humanoid_arm_5dof.ros2_control.xacro  humanoid_arm_5dof.srdf  humanoid_arm_5dof.urdf.xacro  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  ros2_controllers.yaml
humanoid_arm_moveit_config/launch/: demo.launch.py  move_group.launch.py  move_group_sim.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
humanoid_arm_teleop/: CMakeLists.txt  package.xml
humanoid_arm_teleop/config/: dualsense_config.yaml  joystick_config.yaml
humanoid_arm_teleop/include/humanoid_arm_teleop/: joystick_teleop.hpp
humanoid_arm_teleop/launch/: dualsense_teleop.launch.py  joystick_teleop.launch.py  keyboard_gazebo.launch.py
humanoid_arm_teleop/src/: automation_demo_node.cpp  contact_manipulation.cpp  contact_manipulation_node.cpp  dualsense_teleop.cpp  dualsense_teleop_node.cpp  joystick_teleop.cpp  joystick_teleop_node.cpp  keyboard_teleop.cpp  keyboard_teleop_node.cpp
humanoid_arm_utilities/: CMakeLists.txt  package.xml
humanoid_arm_utilities/include/humanoid_arm_utilities/: arm_limits_calibrator.h
humanoid_arm_utilities/src/: arm_limits_calibrator.cpp  arm_limits_calibrator_node.cpp
scripts/: tune_single_joint.sh
