<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>humanoid_arm_teleop</name>
  <version>1.0.0</version>
  <description>Teleoperation nodes for 5-DOF humanoid arm with joystick and keyboard control</description>

  <maintainer email="your.email@example.com">Your Name</maintainer>
  <license>BSD-3-Clause</license>

  <url type="website">https://github.com/your-username/humanoid-arm-5dof-ros2</url>
  <url type="bugtracker">https://github.com/your-username/humanoid-arm-5dof-ros2/issues</url>
  <url type="repository">https://github.com/your-username/humanoid-arm-5dof-ros2</url>

  <author email="your.email@example.com">Your Name</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>control_msgs</depend>
  <depend>moveit_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>

  <exec_depend>joy</exec_depend>
  <exec_depend>teleop_twist_joy</exec_depend>
  <exec_depend>moveit_servo</exec_depend>
  <exec_depend>humanoid_arm_description</exec_depend>
  <exec_depend>humanoid_arm_control</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>